# nmlr

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
demo/: app.py
experiments/ambiguous_logic/: costs.py  data.jsonl  metrics.py  run_baseline_cot.py  run_baseline_cot_sc.py  run_nmlr.py
experiments/plots/: plot_results.py
nmlr/: __init__.py  candidate.py  llm_adapters.py  scoring.py  search.py  verifier.py
nmlr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nmlr/examples/: aisentinel_demo.py  symbolic_demo.py
tests/: test_integration.py  test_llm_adapters.py  test_pruning.py  test_scoring.py  test_search.py  test_symbolic.py
