[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nmlr"
version = "0.1.0"
dependencies = [
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.4",
    "pydantic>=2.9.0",
    "tenacity>=8.5.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "openai>=1.43.0",
    "anthropic>=0.34.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nmlr*"]

[tool.pytest.ini_options]
addopts = "--cov=nmlr --cov-report=term-missing"
testpaths = ["tests"]
